-------------------------------------------------------------------------------
Changes in version 1.025

- Renamed the "setmode" function in bg-installer that was causing
  compile problems on *BSD systems.

- Added a sysdep for struct timespec, which is defined if not present.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.024

- Fixed (again) glob patterns to allow both "!" (like modern glob) or
  "^" (like existing shells) for negating character sets.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.023

- Tweaked str_alloc to use realloc when appropriate.

- Fixed glob pattern matches to use "!" instead of "~" for negating
  character sets like all other globs use.

- Fixed the installer libraries to include all the necessary object
  files for producing the installer/instcheck/instshow programs.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.022

- Added a generic installer program, similar to the "install" program
  included with ezmlm.

- Fixed the instshow library to use and dispaly the install prefix just
  like the other instlib programs.

- The installers now automatically create missing directories, and
  installs into temporary files that get renamed.

- Added path_mkdirs function.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.021
